# climate-ref-aft

./: .bumpversion-helm.toml  .bumpversion.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml  towncrier.toml  versions.toml
.github/workflows/: bump.yaml  ci.yml  nightly.yml  packaging.yaml  release.yml
changelog/: +secret-key-guard.fix.md  +small-cleanups.trivial.md  +version-consistency.improvement.md  10.fix.md  11.improvement.md  12.fix.md  13.feature.md  14.improvement.md  15.docs.md  15.fix.md  15.improvement.md  15.trivial.md  16.feature.md  17.breaking.md  17.improvement.md  18.trivial.md  19.improvement.md  3.feature.md  7.feature.md  7.fix.md  7.improvement.md  README.md
docker/: docker-compose.local.yaml  docker-compose.yaml
helm/: Chart.yaml  README.md  local-test-values.yaml  values.yaml
helm/ci/: gh-actions-values.yaml  minimal-values.yaml
helm/templates/: _helpers.tpl  ingress.yaml  migrate-job.yaml
helm/templates/api/: deployment.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/templates/flower/: configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
helm/templates/providers/: deployment.yaml  esmvaltool-config.yaml  hpa.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
scripts/: e2e-minikube.sh  smoke-test.sh
scripts/lib/: api_check.py
src/climate_ref_aft/: __init__.py
tests/: conftest.py  test_version_consistency.py
tests/integration/: test_cmip7_aft.py
